# scout

./: CONTRIBUTING.md  README.md  docker-compose.yml
orchestrator/: .dockerignore  .env.example  CLAUD.md  Dockerfile  README.md  config.yaml  pyproject.toml
orchestrator/skills/defaults/: fetch_and_analyze.yaml  git_inference.yaml  http_check.yaml  log_analysis.yaml  logql_generation.yaml  ppl_generation.yaml  ppl_log_analysis.yaml
orchestrator/src/: bootstrap.py  main.py
orchestrator/src/agent_factories/: __init__.py  agent_instructions.yaml  instructions.py  log_query_factory.py
orchestrator/src/api/: router.py
orchestrator/src/api/routes/: health.py  skills.py  tasks.py
orchestrator/src/config/: __init__.py  app_config.py  integrations.py  settings.py
orchestrator/src/core/: base.py
orchestrator/src/core/mcp/: __init__.py  registry.py
orchestrator/src/core/skills/: __init__.py  base.py  registry.py  runner.py
orchestrator/src/core/tools/: __init__.py  base.py
orchestrator/src/integrations/: __init__.py  flavours.py
orchestrator/src/integrations/common/: __init__.py  auth.py
orchestrator/src/integrations/http/: __init__.py  tool.py
orchestrator/src/integrations/logs/: __init__.py  agent.py  base.py  clickhouse.py  config.py  dedupe.py  local_file.py  loki.py  opensearch.py  parsers.py  registry.py  tools.py
orchestrator/src/integrations/repository/: __init__.py  github.py
orchestrator/src/integrations/traces/: __init__.py  base.py  (+3 more)
orchestrator/tests/: test_dynaconf_config.py  test_health.py  test_mcp_registry.py  test_tasks_route.py
(+3 files in other folders)
